new action factory with some examples

--- a/apps/examples/templates/layout.html
+++ b/apps/examples/templates/layout.html
@@ -37,6 +37,7 @@
         Made with py4web
       </div>
     </footer>
+    <script src="js/axios.min.js"></script>
     [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
   </body>  
 </html>
