add link to discussion group

--- a/apps/_default/templates/index.html
+++ b/apps/_default/templates/index.html
@@ -25,6 +25,7 @@
       <a href="/_dashboard">Dashboard</a>
       <a href="/_documentation?version=[[=version]]">Documentation</a>
       <a href="https://github.com/web2py/py4web">Source</a>
+      <a href="https://groups.google.com/forum/#!forum/py4web">Discuss</a>
     </main>
   </body>
 </html>
