--- a/apps/myfeed/templates/home.html
+++ b/apps/myfeed/templates/home.html
@@ -10,6 +10,6 @@
   </a>
   on [[=item.created_on]] says
   <blockquote>[[=item.body]]</blockquote>
-  [[=button_like(id=item.id)]]
+  [[=like.button('Like')(id=item.id)]]
 </div>
 [[pass]]
