--- a/apps/_scaffold/static/components/auth.html
+++ b/apps/_scaffold/static/components/auth.html
@@ -3,7 +3,7 @@ e<div>
     <center>
       <h2 class="subtitle">Register</h2>
     </center>
-    <div class="field">
+    <div class="field" v-if="fields[0].name == 'username'">
       <input class="input" v-model="form.username" type="email" placeholder="username">
       <span v-if="errors.username">{{errors.username}}</span>
     </div>
@@ -27,11 +27,36 @@ e<div>
       <input class="input" v-model="form.last_name" type="text" placeholder="last name">
       <span v-if="errors.last_name">{{errors.last_name}}</span>
     </div>
+    <div class="field" v-for="field in fields" v-if="field._added">      
+      <label v-if="field.type=='boolean'" class="input">
+        <input v-model="form[field.name]" type="checkbox">
+        <span v-text="field.name"></span>
+      </label>
+      <input v-if="field.type=='integer' || field.type=='float'" class="input" 
+             v-model="form[field.name]" type="number" v-bind:placeholder="field.name">
+      <input v-else class="input"
+             v-model="form[field.name]" type="text" v-bind:placeholder="field.name">
+      <span v-if="errors[field.name]">{{errors[field.name]}}</span>
+    </div>
     <div class="control" style="text-align:center">
       <button class="button is-link" v-on:click="submit_register()">Register</button>
       <button class="button" v-on:click="go('login')">Login</button>
       <button class="button" v-on:click="go('request_reset_password')">Lost Password</button>
     </div>
+  </div>
+  <div v-else-if="page=='404'">
+    <center>
+      <h2 class="subtitle">404 - Page non available</h2>
+      <button v-if="user === null" class="button" v-on:click="go('login')">Login</button>
+      <button v-else class="button" v-on:click="go('logout')">Logout</button>
+    </center>    
+  </div>
+  <div v-else-if="page=='403'">
+    <center>
+      <h2 class="subtitle">403 - User not authorized</h2>
+      <button v-if="user === null" class="button" v-on:click="go('login')">Login</button>
+      <button v-else class="button" v-on:click="go('logout')">Logout</button>
+    </center>    
   </div>
   <div v-else-if="user === null && page=='login'">
     <center>
