--- a/apps/examples/templates/layout.html
+++ b/apps/examples/templates/layout.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAAQEAAAEAIAAwAAAAFgAAACgAAAABAAAAAgAAAAEAIAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAAA=="/>
     <link rel="stylesheet" href="css/bulma.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="[[=URL('static', 'font-awesome-4.7.0/css/font-awesome.css')]]">
     [[block page_head]]<!-- individual pages can customize head here -->[[end]]
   </head>
-  <body>    
+  <body>
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="[[=URL('index')]]">
@@ -22,7 +22,7 @@
         </a>
       </div>
       <div id="left-navbar" class="navbar-menu">
-        <div class="navbar-start">       
+        <div class="navbar-start">
           [[block page_menu_items]]<!-- individual pages can add menu items here -->[[end]]
         </div>
       </div>
@@ -37,7 +37,10 @@
         Made with py4web
       </div>
     </footer>
+    <script src="js/sugar.min.js"></script>
     <script src="js/axios.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/utils.js"></script>
     [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
-  </body>  
+  </body>
 </html>
