Adds custom form helper

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -30,6 +30,10 @@
     <td><a href="[[=URL('forms')]]">example</a></td>
   </tr>
   <tr>
+    <td>A page with a custom styled form</td>
+    <td><a href="[[=URL('custom_form')]]">example</a></td>
+  </tr>
+  <tr>
     <td>A page using yatl helpers</td>
     <td><a href="[[=URL('helpers')]]">example</a></td>
   </tr>
