proper language based syntax highlighting accomplished

--- a/apps/_dashboard/templates/gitlog.html
+++ b/apps/_dashboard/templates/gitlog.html
@@ -59,7 +59,7 @@
     <script src="js/jquery.min.js"></script>
     <script>
       $('.gitshow').click(function(){
-        checkFull($(this).attr('id'))
+        checkFull($(this).attr('id'));
         $('.kryten').html('<iframe src="'+$(this).attr('data-src')+'"></iframe>');
       });
     </script>
