Fixed also auth

--- a/apps/_scaffold/templates/auth.html
+++ b/apps/_scaffold/templates/auth.html
@@ -1,8 +1,10 @@
 [[extend "layout.html"]]
-<div id="vue">
-  <div class="columns">
-    <div class="column is-half is-offset-one-quarter" style="border : 1px solid #e1e1e1; border-radius: 10px">
-      <auth></auth>
+<div class="section">
+  <div id="vue">
+    <div class="columns">
+      <div class="column is-half is-offset-one-quarter" style="border : 1px solid #e1e1e1; border-radius: 10px">
+        <auth></auth>
+      </div>
     </div>
   </div>
 </div>
