--- a/apps/_scaffold/templates/index.html
+++ b/apps/_scaffold/templates/index.html
@@ -1,5 +1,7 @@
 [[extend 'layout.html']]
 
-<div class="vars">
-    [[=message]]
+<div class="section">
+  <div class="vars">
+      [[=message]]
+  </div>
 </div>
