fixed activation in burger more

--- a/apps/_scaffold/templates/layout.html
+++ b/apps/_scaffold/templates/layout.html
@@ -14,7 +14,7 @@
         <a class="navbar-item" href="[[=URL('index')]]">
           <strong>APP LOGO</strong>
         </a>
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="left-navbar"
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="the-navbar-menu"
            onclick="this.classList.toggle('is-active');document.getElementById(this.dataset.target).classList.toggle('is-active');">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
