Better vueform, understands local/gmt time, dropdowns, etc

--- a/apps/examples/templates/vueform.html
+++ b/apps/examples/templates/vueform.html
@@ -9,7 +9,8 @@
 </div>
 
 [[block page_scripts]]
-<script src="[[=URL('static/components/vueform/vueform.js')]]"></script>
+<script src="components/vueform/luxon.min.js"></script>
+<script src="components/vueform/vueform.js"></script>
 <script>
   var app = new Vue({
       el: "#vue",
