--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -243,7 +243,7 @@
               <table>
                 <tr>
                   <td></td>
-                  <td><input type="text" v-model="modal.form.name" placeholder=somefile.html></td>
+                  <td><input type="text" v-model="modal.form.filename" placeholder="path/somefile.html"></td>
                 </tr>
               </table>
             </div>
