--- a/apps/examples/templates/starrating.html
+++ b/apps/examples/templates/starrating.html
@@ -10,6 +10,7 @@
 
 [[block page_scripts]]
 <script src="[[=URL('static/components/starrater/starrater.js')]]"></script>
+<!-- To be able to use components, we need to have a Vue main element running. -->
 <script>
   var app = new Vue({
       el: "#vue",
