With search bar

--- a/apps/examples/static/components/grid/grid.html
+++ b/apps/examples/static/components/grid/grid.html
@@ -1,5 +1,13 @@
 <div class="section">
   <div v-if="rows.length > 0" class="grid">
+    <div class="level">
+      <div class="field">
+        <p class="control has-icons-right">
+          <input class="input" type="text" :placeholder="search_placeholder">
+          <span class="icon is-small is-right">
+            <i class="fa fa-search"></i>
+          </span>
+    </div>
     <table class="table is-striped is-fullwidth">
       <tr v-for="row in rows">
         <template v-if="row.is_header">
