added link to example from index

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -69,4 +69,9 @@
     <td>Star rating component in Vue.  Subclass components.starrater.StarRater to tailor.</td>
     <td><a href="[[=URL('star_rater')]]">example</a></td>
   </tr>
+  <tr>
+    <td>Star rating component in Vue; example of component instantiation from Vue.
+      Subclass components.starrater.StarRater to tailor.</td>
+    <td><a href="[[=URL('star_rater_vue')]]">example</a></td>
+  </tr>
 </table>
