added some grid examples

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -22,12 +22,16 @@
     <td><a href="[[=URL('update_form/1')]]">example</a></td>
   </tr>
   <tr>
-    <td>A page with an ajax powered grid</td>
-    <td><a href="[[=URL('grid')]]">example</a></td>
-  </tr>
-  <tr>
     <td>A page with mutiple forms</td>
     <td><a href="[[=URL('forms')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>A page with an serverside pure html grid</td>
+    <td><a href="[[=URL('html_grid')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>A page with an ajax powered grid</td>
+    <td><a href="[[=URL('ajax_grid')]]">example</a></td>
   </tr>
   <tr>
     <td>A page with a custom styled form</td>
