--- a/apps/_scaffold/templates/auth.html
+++ b/apps/_scaffold/templates/auth.html
@@ -3,6 +3,7 @@
   <div id="vue">
     <div class="columns">
       <div class="column is-half is-offset-one-quarter" style="border : 1px solid #e1e1e1; border-radius: 10px">
+				<auth plugins="local,oauth2google,oauth2facebook,oauth2okta"></auth>
         <auth></auth>
       </div>
     </div>
