improved utils.js with component support, more examples

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -50,6 +50,14 @@
     <td><a href="[[=URL('count')]]">example</a></td>
   </tr>
   <tr>
+    <td>A page embedding multiple auth forms</td>
+    <td><a href="[[=URL('auth_forms')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>A page embedding a py4web component via ajax (no Vue)</td>
+    <td><a href="[[=URL('component_loader')]]">example</a></td>
+  </tr>
+  <tr>
     <td>Sample Vue.js client-side grid.  Subclass components.grid.Grid to tailor.</td>
     <td><a href="[[=URL('vuegrid')]]">example</a></td>
   </tr>
