--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -14,6 +14,10 @@
     <td><a href="[[=URL('error')]]">example</a></td>
   </tr>
   <tr>
+    <td>A page with a flash</td>
+    <td><a href="[[=URL('flash_example')]]">example</a></td>
+  </tr>
+  <tr>
     <td>A page with a create form</td>
     <td><a href="[[=URL('create_form')]]">example</a></td>
   </tr>
