--- a/apps/examples/templates/layout.html
+++ b/apps/examples/templates/layout.html
@@ -5,42 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAAQEAAAEAIAAwAAAAFgAAACgAAAABAAAAAgAAAAEAIAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAAA=="/>
     <link rel="stylesheet" href="css/bulma.css">
-    <link rel="stylesheet" href="[[=URL('static', 'font-awesome-4.7.0/css/font-awesome.css')]]">
-    [[block page_head]]<!-- individual pages can customize head here -->[[end]]
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    [[block page_head]]<!-- individual pages can customize header here -->[[end]]
   </head>
   <body>
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="[[=URL('index')]]">
-          <strong>Examples</strong>
+          <strong>py4web examples</strong>
         </a>
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="left-navbar"
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="the-navbar-menu"
            onclick="this.classList.toggle('is-active');document.getElementById(this.dataset.target).classList.toggle('is-active');">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
         </a>
       </div>
-      <div id="left-navbar" class="navbar-menu">
+      <div id="the-navbar-menu" class="navbar-menu">
         <div class="navbar-start">
           [[block page_menu_items]]<!-- individual pages can add menu items here -->[[end]]
         </div>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              [[if globals().get('user'):]]
+                <div class="navbar-item has-dropdown is-hoverable">
+                  <a class="navbar-link is-primary">
+                    [[=globals().get('user').get('email')]]
+                  </a>
+                  <div class="navbar-dropdown">
+                    <a class="navbar-item" href="[[=URL('auth/logout')]]">
+                      Logout
+                    </a>
+                    <!-- <a class="navbar-item" href="[[=URL('user/profile')]]">
+                      Profile
+                    </a> -->
+                  </div>
+                </div>
+              [[else:]]
+                <a class="button is-primary" href="[[=URL('auth/register')]]">
+                  Sign up
+                </a>
+                <a class="button is-primary"href="[[=URL('auth/login')]]">
+                  Log in
+                </a>
+              [[pass]]
+            </div>
+          </div>
+        </div>
       </div>
     </nav>
-    <section class="section">
-      <!-- beginning of HTML inserted by extending template -->
-      [[include]]
-      <!-- end of HTML inserted by extending template -->
-    </section>
+    <div class="container" id="py4web-flash"></div>
+    <!-- beginning of HTML inserted by extending template -->
+    [[include]]
+    <!-- end of HTML inserted by extending template -->
     <footer class="footer">
       <div class="content has-text-centered">
         Made with py4web
       </div>
     </footer>
-    <script src="js/sugar.min.js"></script>
-    <script src="js/axios.min.js"></script>
-    <script src="js/vue.js"></script>
-    <script src="js/utils.js"></script>
-    [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
   </body>
+  <script src="js/sugar.min.js"></script>
+  <script src="js/axios.min.js"></script>
+  <script src="js/vue.min.js"></script>
+  <script src="js/utils.js"></script>
+  [[if globals().get('flash'):]]<script>utils.flash([[=XML(flash)]]);</script>[[pass]]
+  [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
 </html>
