added Flash Fixture

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -14,8 +14,12 @@
     <td><a href="[[=URL('error')]]">example</a></td>
   </tr>
   <tr>
-    <td>A page with a flash</td>
+    <td>A page with a flash (clientside only)</td>
     <td><a href="[[=URL('flash_example')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>A page with a flash (with redirect and fixture)</td>
+    <td><a href="[[=URL('flash_example_fixture')]]">example</a></td>
   </tr>
   <tr>
     <td>A page with a create form</td>
