--- a/apps/examples/templates/component_loader.html
+++ b/apps/examples/templates/component_loader.html
@@ -1,5 +1,5 @@
 [[extend 'layout.html']]
 
-<py4web-component id="component_1" url="[[=URL('mycomponent')]]">
+<py4web-component id="component_1" url="[[=URL('mycomponent.load')]]">
     <blink>Loading...</blink>
 </py4web-component>
