flash in components

--- a/apps/examples/templates/layout.html
+++ b/apps/examples/templates/layout.html
@@ -55,9 +55,11 @@
         </div>
       </div>
     </nav>
-    <div class="container" id="py4web-flash"></div>
+    <div style="margin: 20px" id="py4web-flash"></div>
     <!-- beginning of HTML inserted by extending template -->
+    <div style="margin: 20px">
     [[include]]
+    </div>
     <!-- end of HTML inserted by extending template -->
     <footer class="footer">
       <div class="content has-text-centered">
