--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -1,97 +1,125 @@
 [[extend 'layout.html']]
 
+
 <table class="table">
   <tr>
+    <th colspan="2" class="is-info">Basic Examples</th>
+  </tr>
+  <tr>
     <td>A normal page using a template</td>
-    <td><a href="[[=URL('index')]]">example</a></td>
+    <td><a class="button" href="[[=URL('index')]]">example</a></td>
   </tr>
   <tr>
     <td>A simple page without template</td>
-    <td><a href="[[=URL('simple_page')]]">example</a></td>
+    <td><a class="button" href="[[=URL('simple_page')]]">example</a></td>
   </tr>
   <tr>
     <td>A page causing an internal error</td>
-    <td><a href="[[=URL('error')]]">example</a></td>
+    <td><a class="button" href="[[=URL('error')]]">example</a></td>
   </tr>
   <tr>
+    <th colspan="2" class="is-info">Fixtues: Flash</th>
+  </tr>  
+  <tr>
     <td>A page with a flash (clientside only)</td>
-    <td><a href="[[=URL('flash_example')]]">example</a></td>
+    <td><a class="button" href="[[=URL('flash_example')]]">example</a></td>
   </tr>
   <tr>
     <td>A page with a flash (with redirect and fixture)</td>
-    <td><a href="[[=URL('flash_example_fixture')]]">example</a></td>
+    <td><a class="button" href="[[=URL('flash_example_fixture')]]">example</a></td>
   </tr>
   <tr>
-    <td>A page with a create form</td>
-    <td><a href="[[=URL('create_form')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>A page with an update form</td>
-    <td><a href="[[=URL('update_form/1')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>A page with mutiple forms</td>
-    <td><a href="[[=URL('forms')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>A page with an serverside pure html grid</td>
-    <td><a href="[[=URL('html_grid')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>A page with an ajax powered grid</td>
-    <td><a href="[[=URL('ajax_grid')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>A page with a custom styled form</td>
-    <td><a href="[[=URL('custom_form')]]">example</a></td>
-  </tr>
+    <th colspan="2" class="is-info">Helpers</th>
+  </tr>  
   <tr>
     <td>A page using yatl helpers</td>
-    <td><a href="[[=URL('helpers')]]">example</a></td>
+    <td><a class="button" href="[[=URL('helpers')]]">example</a></td>
   </tr>
   <tr>
+    <th colspan="2" class="is-info">Internationalization and Pluralization</th>
+  </tr>  
+  <tr>
     <td>A page using internationalization (try set browser to italian)</td>
-    <td><a href="[[=URL('hello')]]">example</a></td>
+    <td><a class="button" href="[[=URL('hello')]]">example</a></td>
   </tr>
   <tr>
     <td>A page using pluralization (try set browser to italian)</td>
-    <td><a href="[[=URL('count')]]">example</a></td>
+    <td><a class="button" href="[[=URL('count')]]">example</a></td>
+  </tr>
+  <tr>
+    <th colspan="2" class="is-info">Components</th>
+  </tr>  
+  <tr>
+    <td>A page embedding a py4web component via ajax (no Vue)</td>
+    <td><a class="button" href="[[=URL('component_loader')]]">example</a></td>
+  </tr>
+  <tr>
+    <th colspan="2" class="is-info">Forms</th>
+  </tr>  
+  <tr>
+    <td>A page with a create form</td>
+    <td><a class="button" href="[[=URL('create_form')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>A page with an update form</td>
+    <td><a class="button" href="[[=URL('update_form/1')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>A page with mutiple forms</td>
+    <td><a class="button" href="[[=URL('forms')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>A page with a custom styled form</td>
+    <td><a class="button" href="[[=URL('custom_form')]]">example</a></td>
+  </tr>
+  <tr>
+    <th colspan="2" class="is-info">Grid (no vue.js)</th>
+  </tr>  
+  <tr>
+    <td>A page with an serverside pure html grid</td>
+    <td><a class="button" href="[[=URL('html_grid')]]">example</a></td>
+  </tr>
+  <tr>
+    <th colspan="2" class="is-info">Grid (requires Vue.js)</th>
+  </tr>  
+  <tr>
+    <td>A page with an ajax powered grid</td>
+    <td><a class="button" href="[[=URL('ajax_grid')]]">example</a></td>
   </tr>
   <tr>
     <td>A page embedding multiple auth forms</td>
-    <td><a href="[[=URL('auth_forms')]]">example</a></td>
+    <td><a class="button" href="[[=URL('auth_forms')]]">example</a></td>
   </tr>
   <tr>
-    <td>A page embedding a py4web component via ajax (no Vue)</td>
-    <td><a href="[[=URL('component_loader')]]">example</a></td>
-  </tr>
+    <th colspan="2" class="is-info">VueGrid (requires Vue.js)</th>
+  </tr>  
   <tr>
     <td>Sample Vue.js client-side grid.  Subclass components.grid.Grid to tailor.</td>
-    <td><a href="[[=URL('vuegrid')]]">example</a></td>
+    <td><a class="button" href="[[=URL('vuegrid')]]">example</a></td>
   </tr>
   <tr>
     <td>Javascript file uploader.  Subclass components.fileupload.FileUpload to tailor.</td>
-    <td><a href="[[=URL('file_uploader')]]">example</a></td>
+    <td><a class="button" href="[[=URL('file_uploader')]]">example</a></td>
   </tr>
   <tr>
     <td>Custom Vue form.  Subclass components.vueform.VueForm to tailor.</td>
-    <td><a href="[[=URL('vue_form')]]">example</a></td>
+    <td><a class="button" href="[[=URL('vue_form')]]">example</a></td>
   </tr>
   <tr>
     <td>Insertion form in Vue.  Subclass components.vueform.InsertForm to tailor.</td>
-    <td><a href="[[=URL('insert_form')]]">example</a></td>
+    <td><a class="button" href="[[=URL('insert_form')]]">example</a></td>
   </tr>
   <tr>
     <td>Update form in Vue.  Subclass components.vueform.TableForm to tailor.</td>
-    <td><a href="[[=URL('update_form')]]">example</a></td>
+    <td><a class="button" href="[[=URL('update_form')]]">example</a></td>
   </tr>
   <tr>
     <td>Star rating component in Vue.  Subclass components.starrater.StarRater to tailor.</td>
-    <td><a href="[[=URL('star_rater')]]">example</a></td>
+    <td><a class="button" href="[[=URL('star_rater')]]">example</a></td>
   </tr>
   <tr>
     <td>Star rating component in Vue; example of component instantiation from Vue.
       Subclass components.starrater.StarRater to tailor.</td>
-    <td><a href="[[=URL('star_rater_vue')]]">example</a></td>
+    <td><a class="button" href="[[=URL('star_rater_vue')]]">example</a></td>
   </tr>
 </table>
