--- a/apps/examples/static/components/starrater/starrater.html
+++ b/apps/examples/static/components/starrater/starrater.html
@@ -2,7 +2,7 @@
     <span v-on:mouseover="stars_over(idx)"
           v-on:click="set_stars(idx)"
           v-for="idx in star_indices">
-        <i v-if="idx <= num_stars_display" class="fa fa-star"></i>
-        <i v-if="idx > num_stars_display" class="fa fa-star-o"></i>
+        <i v-if="idx <= num_stars_display" class="fas fa-star"></i>
+        <i v-if="idx > num_stars_display" class="far fa-star"></i>
     </span>
 </span>
