--- a/apps/_scaffold/static/css/no.css
+++ b/apps/_scaffold/static/css/no.css
@@ -1,19 +1,20 @@
 /*****************************************************
- no.css version 2020-08-08.1
+ no.css version 2020-08-09.1
  
  Designed to style pages without need for custom classes.
- headers, paragraphs, buttons, tables, forms, nav menus are styled automatically.
- The only custom classes are color names and grid row/col sizes.
- It also implements pure CSS accordions and modals.
+ headers, paragraphs, buttons, tables, forms, 
+ nav menus, alerts, and dialogs are styled automatically.
+ The only custom classes are color names, grid column sizes,
+ and a few convenience ones.
 
  Grid:
-   row, col, c25, c33, c50, c66, c75
+   columns, col, c25, c33, c50, c66, c75
  Colors:
    black, white, default, success, warning, error, info, transparent
  Effects:
-   accordion, modal
+   accordion, close
  Utils:
-   full, padded, notification, close
+   fill, padded
 
  License: MIT
  *****************************************************/
@@ -163,7 +164,7 @@ thead th {
  buttons
  ****************************************************/
 
-.button, button, input[type='button'], input[type='reset'], input[type='submit'] {
+[role="button"], button, input[type='button'], input[type='reset'], input[type='submit'] {
   background-color: #0074d9;
   border-radius: 5px;
   color: #fff;
@@ -180,7 +181,7 @@ thead th {
   min-width: 100px;
 }
 
-.button:focus, .button:hover, button:focus, button:hover, input[type='button']:focus, input[type='button']:hover, input[type='reset']:focus, input[type='reset']:hover, input[type='submit']:focus, input[type='submit']:hover {
+[role="button"]:focus, [role="button"]:hover, button:focus, button:hover, input[type='button']:focus, input[type='button']:hover, input[type='reset']:focus, input[type='reset']:hover, input[type='submit']:focus, input[type='submit']:hover {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -243,12 +244,12 @@ body > div {
   margin-right: auto;
 }
 
-.row {
+.columns {
   display: table;
   width: 100%;
 }
 
-.row .row {
+.columns .columns {
   margin: 0 -1.5em;
 }
 
@@ -273,7 +274,7 @@ body > div {
   }
 }
 
-.row:after {
+.columns:after {
   content: "";
   clear: both;
   display: table;
@@ -442,7 +443,7 @@ nav>li>ul>li:first-child:before{
  modal
  ****************************************************/
 
-.modal {
+[role="dialog"] > div {
   position:fixed;
   z-index:9999;
   top:0;
@@ -455,17 +456,14 @@ nav>li>ul>li:first-child:before{
   visibility:hidden;
   opacity:0;
 }
+[role="dialog"] > input[type=checkbox] { display: none !important; }
+input[type=checkbox]:checked ~ div {visibility:visible; opacity:1}
+[role="dialog"] > div > *:not(.close) {width: 66%; margin-left:auto; margin-right:auto; border-radius: 5px;}
+[role="dialog"] > div > .close, [role="alert"] > .close {
+  background: url('data:image/svg+xml;utf8,<svg fill="%23000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M 12 2 C 6.4889971 2 2 6.4889971 2 12 C 2 17.511003 6.4889971 22 12 22 C 17.511003 22 22 17.511003 22 12 C 22 6.4889971 17.511003 2 12 2 z M 12 4 C 16.430123 4 20 7.5698774 20 12 C 20 16.430123 16.430123 20 12 20 C 7.5698774 20 4 16.430123 4 12 C 4 7.5698774 7.5698774 4 12 4 z M 8.7070312 7.2929688 L 7.2929688 8.7070312 L 10.585938 12 L 7.2929688 15.292969 L 8.7070312 16.707031 L 12 13.414062 L 15.292969 16.707031 L 16.707031 15.292969 L 13.414062 12 L 16.707031 8.7070312 L 15.292969 7.2929688 L 12 10.585938 L 8.7070312 7.2929688 z"/></svg>') center right no-repeat;
+  width:24px; height:24px; cursor: pointer; position:absolute; top:15px; right:15px;
+}
 
-.modal:target {visibility:visible; opacity:1}
-.modal div {width: 66%; margin-left:auto; margin-right:auto; border-radius: 5px;}
-.modal .close:not(.button) {
-  position:absolute; top:10px; right:30px; font-size:20px;
-  transition:all 200ms; text-align:center; width:24px; height:24px; 
-  border-radius:100px; background: white; color: black;
-}
-.modal .close:not(.button):after, .notification .close:not(.button):after {
-  content: '✖';
-}
 /****************************************************
  accordion
  ****************************************************/
@@ -494,7 +492,7 @@ nav>li>ul>li:first-child:before{
  convenience
  ****************************************************/
 
-.notification {
+[role="alert"] {
   margin: 20px 25px 0 25px;
   padding: 20px 50px 20px 20px;
   position: relative;
@@ -502,10 +500,10 @@ nav>li>ul>li:first-child:before{
   color: black;
 }
 
-.notification .close {
+[role="alert"] > .close {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
 }
 
 .padded {
