Now we have Bulma components separately

--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -50,6 +50,10 @@
     <td><a href="[[=URL('vuegrid')]]">example</a></td>
   </tr>
   <tr>
+    <td>Sample Vue.js client-side grid using Bulma css.  Subclass components.grid.Grid to tailor.</td>
+    <td><a href="[[=URL('vuegrid_bulma')]]">example</a></td>
+  </tr>
+  <tr>
     <td>Javascript file uploader.  Subclass components.fileupload.FileUpload to tailor.</td>
     <td><a href="[[=URL('file_uploader')]]">example</a></td>
   </tr>
@@ -58,12 +62,24 @@
     <td><a href="[[=URL('vue_form')]]">example</a></td>
   </tr>
   <tr>
+    <td>Custom Vue form using Bulma css.  Subclass components.vueform.VueForm to tailor.</td>
+    <td><a href="[[=URL('vue_form_bulma')]]">example</a></td>
+  </tr>
+  <tr>
     <td>Insertion form in Vue.  Subclass components.vueform.InsertForm to tailor.</td>
     <td><a href="[[=URL('insert_form')]]">example</a></td>
   </tr>
   <tr>
+    <td>Insertion form in Vue, using Bulma css.  Subclass components.vueform.InsertForm to tailor.</td>
+    <td><a href="[[=URL('insert_form_bulma')]]">example</a></td>
+  </tr>
+  <tr>
     <td>Update form in Vue.  Subclass components.vueform.TableForm to tailor.</td>
     <td><a href="[[=URL('update_form')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>Update form in Vue, using Bluma css.  Subclass components.vueform.TableForm to tailor.</td>
+    <td><a href="[[=URL('update_form_bulma')]]">example</a></td>
   </tr>
   <tr>
     <td>Star rating component in Vue.  Subclass components.starrater.StarRater to tailor.</td>
@@ -73,5 +89,10 @@
     <td>Star rating component in Vue; example of component instantiation from Vue.
       Subclass components.starrater.StarRater to tailor.</td>
     <td><a href="[[=URL('star_rater_vue')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>Star rating component in Vue using Bulma css; example of component instantiation from Vue.
+      Subclass components.starrater.StarRater to tailor.</td>
+    <td><a href="[[=URL('star_rater_vue_bulma')]]">example</a></td>
   </tr>
 </table>
